by qianjun;fix scrollbar

--- a/scrollbar/avalon.scrollbar.scss
+++ b/scrollbar/avalon.scrollbar.scss
@@ -56,9 +56,9 @@ $pf : ".ui-scrollbar";
 	    }
 	}
 	&-scroller{
-		position: absolute;
+		/*position: absolute;
 		left: 0;
-		top: 0;
+		top: 0;*/
 	}
 	&-left {
 		left: 0;
